MyAgentforceProject/force-app/main/default/objects/Account/fields/Customer_Rating__c.field-meta.xml
<CustomField>
    <fullName>Customer_Rating__c</fullName>
    <label>Customer Rating</label>
    <description>Classifies the strategic tier of this account, used to select the appropriate business process configuration in the Bedrock Dynamic Process Framework.</description>
    <inlineHelpText>Select the customer relationship tier: Standard for transactional accounts, Preferred for key accounts, Strategic for enterprise or named accounts requiring elevated process steps.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>